--- a/index.html
+++ b/index.html
@@ -20,10 +20,9 @@
                     <i class="fas fa-angle-right"></i>
                 </div>
                 <div class="nav">
-                    <i class="fas fa-circle active first"></i>
-                    <i class="fas fa-circle"></i>
-                    <i class="fas fa-circle"></i>
-                    <i class="fas fa-circle last"></i>
+                    <i 
+                    :class = "(index === counter) ? 'active' : '' " class="fas fa-circle" 
+                    v-for="(img, index) in images"></i>
                 </div>
             </div>
         </div>
